--- a/yellowfin/install.properties
+++ b/yellowfin/install.properties
@@ -1,12 +1,15 @@
-InstallPath=/application/yellowfin
+InstallPath=/applications/yellowfin
+LicenseFilePath=/license/license.lic
+InstallTutorialDatabase=false
 ServicePort=7900
+InstallService=false
 CreateYellowfinDB=true
 CreateYellowfinDBUser=true
-DatabaseType=MySQL
-DatabaseHostname=mysql
-DatabasePort=3306
+DatabaseType=PostgreSQL
+DatabaseHostname=postgres
+DatabasePort=5432
 DatabaseName=yellowfin
-DatabaseDBAUser=root
-DatabaseDBAPassword=password
+DatabaseDBAUser=postgres
+DatabaseDBAPassword=
 DatabaseUser=yellowfin
-DatabasePassword=password
+DatabasePassword=yellowfin
